tests/baselines/reference/reservedNameOnModuleImportWithInterface.errors.txt
reservedNameOnModuleImportWithInterface.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reservedNameOnModuleImportWithInterface.ts(3,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reservedNameOnModuleImportWithInterface.ts(6,12): error TS2438: Import name cannot be 'string'.


==== reservedNameOnModuleImportWithInterface.ts (3 errors) ====
    declare module test {
                   ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface mi_string { }
        module mi_string { }
               ~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
        // Should error; imports both a type and a module, which means it conflicts with the 'string' type.
        import string = mi_string;
               ~~~~~~
!!! error TS2438: Import name cannot be 'string'.
    }
    